--- a/_data/projects.json
+++ b/_data/projects.json
@@ -504,7 +504,7 @@
                 "description": "Event Day 2",
                 "owner": "Emily",
                 "project_name": "Virtual AppSec Days Summer of Security",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-07-27",
