--- a/_data/projects.json
+++ b/_data/projects.json
@@ -83,7 +83,7 @@
                 "description": "Independence Day (Observed)",
                 "owner": "No Owner",
                 "project_name": "OWASP Staff Holidays",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-09-07",
