--- a/_data/projects.json
+++ b/_data/projects.json
@@ -7,47 +7,6 @@
         "url": "https://owasp.org/www-staff/projects/201902-Trademarks"
     },
     {
-        "name": "Email Clean-Up",
-        "milestones": [
-            {
-                "milestone_date": "2020-07-15",
-                "description": "Develop 5-step email campaign to migrate OWASP-Foundation list into OWASP-Main",
-                "owner": "Mike",
-                "project_name": "Email Clean-Up",
-                "status": "on-time"
-            },
-            {
-                "milestone_date": "2020-07-27",
-                "description": "Launch campaign",
-                "owner": "Mike",
-                "project_name": "Email Clean-Up",
-                "status": "on-time"
-            },
-            {
-                "milestone_date": "2020-08-20",
-                "description": "Report metrics from campaign",
-                "owner": "Mike",
-                "project_name": "Email Clean-Up",
-                "status": "future"
-            },
-            {
-                "milestone_date": "2020-08-21",
-                "description": "Downlown to OWASP Staff the OWASP Foundation list then REMOVE it from Mailchimp",
-                "owner": "Mike",
-                "project_name": "Email Clean-Up",
-                "status": "future"
-            }
-        ],
-        "description": "MailChimp is the email tool of record for the OWASP Foundation. Given the GDPR rules of the EU and the undocumented history of email address imports into MailChimp, this project's aim is to re-validate every address in our system for an opt-in for marketing emails. OWASP should take a leadership position in proactively cleansing our email list and ensure voluntary opt-in of addresses.The project will primarily be a series of emails requesting recipients to opt-in to Foundation marketing messages.",
-        "leaders": [
-            {
-                "name": "Mike McCamon",
-                "email": "mike.mccamon@owasp.com"
-            }
-        ],
-        "url": "https://owasp.org/www-staff/projects/201910-Email-Cleanup"
-    },
-    {
         "name": "Events Form",
         "milestones": [
             {
@@ -225,13 +184,6 @@
         "url": "https://owasp.org/www-staff/projects/202004-OWASP-Virtual-Training-Day"
     },
     {
-        "name": "2H20 Marketing Plan",
-        "milestones": [],
-        "description": "tle: 2H20 Marketing Planlayout: col-generic---",
-        "leaders": [],
-        "url": "https://owasp.org/www-staff/projects/202005-marketing-plan"
-    },
-    {
         "name": "Global AppSec - Dublin 2020",
         "milestones": [],
         "description": "```Training Days: June 15-17, 2020Conference Days: June 18-19, 2020```Welcome to Global AppSec Dublin 2020 presented by the OWASP Foundation. The Global AppSec Conference is the premier application security conference for developers and security experts. Designed for private and public sector infosec professionals, the OWASP three day training and two day conference equips developers, defenders, and advocates to build a more secure web.Join us for a celebration of leading application security technologies, speakers, prospects, and community, in a unique event that will build on everything you already know to expect from an OWASP Global Conference.",
@@ -332,7 +284,7 @@
                 "description": "Open Scholarship Form",
                 "owner": "Mike",
                 "project_name": "Virtual AppSec Days Summer of Security",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-08-17",
@@ -509,6 +461,42 @@
         "url": "https://owasp.org/www-staff/projects/202010-Global-AppSec-SF"
     },
     {
+        "name": "Associate Executive Director Off-boarding",
+        "milestones": [
+            {
+                "milestone_date": "2020-07-28",
+                "description": "Present to Board Trademark Line of Business Concept",
+                "owner": "Mike",
+                "project_name": "Associate Executive Director Off-boarding",
+                "status": "on-time"
+            },
+            {
+                "milestone_date": "2020-07-31",
+                "description": "Complete Staff Performance Reviews",
+                "owner": "Mike",
+                "project_name": "Associate Executive Director Off-boarding",
+                "status": "on-time"
+            },
+            {
+                "milestone_date": "2020-08-14",
+                "description": "Contract Packet Ready for Board Review",
+                "owner": "Mike",
+                "project_name": "Associate Executive Director Off-boarding",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-08-25",
+                "description": "Encourage consensus acceptance of Contract Packet at Board Meeting (Vote not needed)",
+                "owner": "Mike",
+                "project_name": "Associate Executive Director Off-boarding",
+                "status": "future"
+            }
+        ],
+        "description": "",
+        "leaders": [],
+        "url": "https://owasp.org/www-staff/projects/202010-assoc-ed-list"
+    },
+    {
         "name": "LASCON 2020",
         "milestones": [
             {
@@ -538,6 +526,13 @@
             }
         ],
         "url": "https://owasp.org/www-staff/projects/202010-event-lascon"
+    },
+    {
+        "name": "2020 Policy Review",
+        "milestones": [],
+        "description": "tle: 2020 Policy Reviewlayout: full-width---",
+        "leaders": [],
+        "url": "https://owasp.org/www-staff/projects/202010-policy-review"
     },
     {
         "name": "Global AppSec - Dublin 2021",
