--- a/_data/projects.json
+++ b/_data/projects.json
@@ -207,7 +207,7 @@
                 "description": "Open Scholarship Form",
                 "owner": "Mike",
                 "project_name": "Virtual AppSec Days Summer of Security",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-07-20",
