--- a/_data/projects.json
+++ b/_data/projects.json
@@ -482,7 +482,7 @@
                 "description": "Contract Packet Ready for Board Review",
                 "owner": "Mike",
                 "project_name": "Associate Executive Director Off-boarding",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-08-25",
