--- a/_data/projects.json
+++ b/_data/projects.json
@@ -277,14 +277,14 @@
                 "description": "Close Scholarship Form",
                 "owner": "Mike",
                 "project_name": "Virtual AppSec Days Summer of Security",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-08-17",
                 "description": "Send Scholarship codes",
                 "owner": "Emily",
                 "project_name": "Virtual AppSec Days Summer of Security",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-08-20",
@@ -514,7 +514,7 @@
                 "description": "Kickoff email sent to Members",
                 "owner": "Mike",
                 "project_name": "2020 Policy Review",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-07-31",
