--- a/_data/projects.json
+++ b/_data/projects.json
@@ -314,21 +314,21 @@
                 "description": "Event Day 2",
                 "owner": "Emily",
                 "project_name": "Virtual AppSec Days Summer of Security",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-08-26",
                 "description": "Send Post Event Survey",
                 "owner": "Mike",
                 "project_name": "Virtual AppSec Days Summer of Security",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-08-26",
                 "description": "Send Thank you email",
                 "owner": "Emily",
                 "project_name": "Virtual AppSec Days Summer of Security",
-                "status": "future"
+                "status": "on-time"
             }
         ],
         "description": "tle: Virtual AppSec Days Summer of Securitylayout: full-widthdate: June-August 2020---# Virtual AppSec Days Summer of Security  ```June 23 - 24, 2020July 28 - 29, 2020August 25 - 26, 2020```The OWASP Foundation is hosting Virtual Trainings during our Virtual AppSec Days Summer of Security events taking place June - August 2020.  The courses will be 8-hour virtual training courses. The courses will be offered in 4-hour blocks over 2 days. The trainings will begin at 12:00pm Eastern Time (USA)/6:00pm Central European Time.",
