--- a/_data/projects.json
+++ b/_data/projects.json
@@ -120,7 +120,7 @@
                 "description": "end out Wufoo Volunteer form through Meetup again for new date/",
                 "owner": "Lisa",
                 "project_name": "BlackHat Asia 2020",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-08-21",
@@ -237,7 +237,7 @@
                 "description": "Modify Event Menu, Event YML file, and banner to have only August",
                 "owner": "Harold",
                 "project_name": "Virtual AppSec Days Summer of Security",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-07-29",
@@ -443,32 +443,32 @@
         "name": "Associate Executive Director Off-boarding",
         "milestones": [
             {
-                "milestone_date": "2020-07-28",
-                "description": "Present to Board Trademark Line of Business Concept",
-                "owner": "Mike",
-                "project_name": "Associate Executive Director Off-boarding",
-                "status": "on-time"
-            },
-            {
-                "milestone_date": "2020-07-31",
+                "milestone_date": "2020-08-31",
                 "description": "Complete Staff Performance Reviews",
                 "owner": "Mike",
                 "project_name": "Associate Executive Director Off-boarding",
-                "status": "on-time"
+                "status": "future"
             },
             {
-                "milestone_date": "2020-08-14",
+                "milestone_date": "2020-09-15",
                 "description": "Contract Packet Ready for Board Review",
                 "owner": "Mike",
                 "project_name": "Associate Executive Director Off-boarding",
-                "status": "on-time"
+                "status": "future"
             },
             {
-                "milestone_date": "2020-08-25",
+                "milestone_date": "2020-09-22",
+                "description": "Present to Board Trademark Line of Business Concept",
+                "owner": "Mike",
+                "project_name": "Associate Executive Director Off-boarding",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-09-22",
                 "description": "Encourage consensus acceptance of Contract Packet at Board Meeting (Vote not needed)",
                 "owner": "Mike",
                 "project_name": "Associate Executive Director Off-boarding",
-                "status": "on-time"
+                "status": "future"
             }
         ],
         "description": "",
