--- a/_data/projects.json
+++ b/_data/projects.json
@@ -356,7 +356,7 @@
                 "description": "Complete Staff Performance Reviews",
                 "owner": "Mike",
                 "project_name": "Associate Executive Director Off-boarding",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-09-15",
@@ -485,7 +485,7 @@
                 "description": "Open CFP",
                 "owner": "Emily",
                 "project_name": "Global AppSec - Dublin 2021",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-09-30",
